fix: dark theme

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <nav class="nav container" id="nav"></nav>
 
   <main class="main container" id="main">
-    <front-main></front-main>
+    <news-main></news-main>
   </main>
 
   <footer-component></footer-component>
