--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,11 @@
 <body>
 <div class="page page_dodgerblue" id="page">
 
-  <header class="header header-stick page_dodgerblue">
-    <header-component></header-component>
-  </header>
-
-  <nav class="nav container" id="nav"></nav>
-
-  <main class="main container" id="main">
-    <front-main></front-main>
-  </main>
-
+  <header-component></header-component>
+  <nav-component></nav-component>
+  <main-component></main-component>
   <footer-component></footer-component>
+
 </div>
 </body>
 </html>
